[gd_scene load_steps=4 format=3 uid="uid://dem2p1krsp4s1"]

[ext_resource type="Script" path="res://Player.gd" id="1_6eexm"]

[sub_resource type="SphereMesh" id="SphereMesh_ar84g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bn1v1"]

[node name="Player" type="RigidBody3D"]
lock_rotation = true
linear_damp = 3.0
angular_damp = 3.0
script = ExtResource("1_6eexm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.551337, 0, 0, 0, 0.54094, 0, 0, 0, 0.734586, 0, 0, 0)
mesh = SubResource("SphereMesh_ar84g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.400359, 0, 0, 0, -1.54101e-08, -0.432805, 0, 0.352542, -1.89185e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_bn1v1")

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 5.52329e-05, 4.02095e-05, -6.43714e-05, 0.958908, 0.283716, -2.28868e-05, -0.283716, 0.958908, 0, 1.85293, 1.90988)
fov = 74.0418

[node name="RayCast3D" type="RayCast3D" parent="."]
collide_with_areas = true
debug_shape_custom_color = Color(1, 1, 0, 1)

[node name="RayCast3D2" type="RayCast3D" parent="."]
target_position = Vector3(1, 0, 0)
collide_with_areas = true
debug_shape_custom_color = Color(1, 1, 0, 1)

[node name="RayCast3D3" type="RayCast3D" parent="."]
target_position = Vector3(-1, 0, 0)
collide_with_areas = true
debug_shape_custom_color = Color(1, 1, 0, 1)
